--- a/course-service/build.gradle
+++ b/course-service/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
     //implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.5'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     //implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.4'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     runtimeOnly 'mysql:mysql-connector-java:8.0.25'
