--- a/config-server/course-service.yml
+++ b/config-server/course-service.yml
@@ -10,6 +10,7 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/course
+    username: root
     password:
   jpa:
     hibernate:
