--- a/config-server/registry-service.yml
+++ b/config-server/registry-service.yml
@@ -1,8 +1,10 @@
-spring:
-  application:
-    name: course-service
-  cloud:
-    config:
-      uri: http://localhost:8081
-      username: root
-      password: s3cr3t
+server:
+  port: 8099
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
