--- a/config-server/enrolment-service.yml
+++ b/config-server/enrolment-service.yml
@@ -18,3 +18,7 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: true
+eureka:
+  client:
+    serviceUrl:
+        defaultZone: http://localhost:8099/eureka/
